--- a/package.json
+++ b/package.json
@@ -4,32 +4,44 @@
     "private": true,
     "dependencies": {
         "@date-io/date-fns": "^1.3.13",
+        "@emotion/react": "^11.8.1",
+        "@emotion/styled": "^11.8.1",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "^3.2.10",
         "@mui/icons-material": "^5.2.5",
+        "@mui/material": "^5.4.4",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "antd": "^4.18.9",
         "axios": "^0.24.0",
         "classnames": "^2.3.1",
         "cors": "^2.8.5",
         "date-fns": "^2.14.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "formik": "^2.2.9",
+        "formik-antd": "^2.0.4",
+        "material-ui-form": "^1.0.0-alpha.26",
         "material-ui-icons": "^1.0.0-beta.36",
         "mongoose": "^6.1.5",
+        "mui-form": "^1.1.16",
+        "node-sass": "^7.0.1",
         "nodemon": "^2.0.15",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-router-dom": "^6.2.1",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-hook-form": "7.27.1",
+        "react-router-dom": "6.2.2",
         "react-scripts": "3.4.1"
     },
     "scripts": {
-        "start": "set PORT=3003 && react-scripts start",
+        "web": "set PORT=3003 && react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "dev2": "nodemon userServer.js"
     },
     "eslintConfig": {
         "extends": "react-app"
