--- a/package.json
+++ b/package.json
@@ -11,20 +11,29 @@
         "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "^3.2.10",
         "@mui/icons-material": "^5.2.5",
+        "@mui/lab": "^5.0.0-alpha.77",
         "@mui/material": "^5.4.4",
+        "@mui/styles": "^5.6.2",
+        "@mui/x-data-grid": "^5.8.0",
+        "@mui/x-data-grid-generator": "^5.8.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
-        "antd": "^4.18.9",
+        "antd": "^4.19.3",
         "axios": "^0.24.0",
         "classnames": "^2.3.1",
         "cors": "^2.8.5",
+        "country-state-city": "^3.0.1",
         "date-fns": "^2.14.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "formik": "^2.2.9",
         "formik-antd": "^2.0.4",
+        "geolocation": "^0.2.0",
+        "geonames.js": "^3.0.6",
+        "material-table": "^2.0.3",
         "material-ui-form": "^1.0.0-alpha.26",
         "material-ui-icons": "^1.0.0-beta.36",
+        "material-ui-search-bar": "^1.0.0",
         "mongoose": "^6.1.5",
         "mui-form": "^1.1.16",
         "node-sass": "^7.0.1",
@@ -33,7 +42,8 @@
         "react-dom": "17.0.1",
         "react-hook-form": "7.27.1",
         "react-router-dom": "6.2.2",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.1",
+        "react-select": "^5.2.2"
     },
     "scripts": {
         "web": "set PORT=3003 && react-scripts start",
